unpackaged/main/default/objects/FPC_MCA_Lender_Offer__c/FPC_MCA_Lender_Offer__c.object-meta.xml
<CustomObject>
    <description>Each offer given to us from the lender on prequal approval.</description>
    <label>Merchant Lender Offer</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>MCA Lender Offer ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merchant Lender Offers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>