unpackaged/main/default/objects/FPC_MCA_Lender_Offer__c/fields/AMT_OFFERED__c.field-meta.xml
<CustomField>
    <fullName>AMT_OFFERED__c</fullName>
    <description>Amount lender offered</description>
    <inlineHelpText>Amount lender offered</inlineHelpText>
    <label>Approved Amount</label>
    <length>32</length>
    <type>Text</type>
</CustomField>