unpackaged/main/default/objects/FPC_MCA_Lender_Offer__c/fields/Broker_Buy_Rate__c.field-meta.xml
<CustomField>
    <fullName>Broker_Buy_Rate__c</fullName>
    <description>This field will capture the buy rate that we are passing along to the Broker.</description>
    <inlineHelpText>Please enter the buy rate that National Funding is passing along to the Broker.</inlineHelpText>
    <label>Broker Buy Rate</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>