unpackaged/main/default/objects/FPC_MCA_Lender_Offer__c/fields/Broker_Tier__c.field-meta.xml
<CustomField>
    <fullName>Broker_Tier__c</fullName>
    <description>This field will indicate the Broker's tier at time of Merchant Lender Offer Creation.  It will be populated by workflow if the opportunity is owned by a broker.</description>
    <inlineHelpText>This field will indicate the Broker's tier at time of Merchant Lender Offer Creation.  It will be populated by workflow if the opportunity is owned by a broker.</inlineHelpText>
    <label>Broker Tier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>