unpackaged/main/default/objects/FPC_MCA_Lender_Offer__c/fields/LENDERID__c.field-meta.xml
<CustomField>
    <fullName>LENDERID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID for lender in custom object lookup.</description>
    <inlineHelpText>ID for lender in custom object lookup.</inlineHelpText>
    <label>LENDERID</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>MCA_Lender_Offers</relationshipName>
    <type>Lookup</type>
</CustomField>