unpackaged/main/default/objects/FPC_MCA_Lender_Offer__c/fields/LENDOR__c.field-meta.xml
<CustomField>
    <fullName>LENDOR__c</fullName>
    <description>Lender</description>
    <inlineHelpText>Pick the lender from the drop down menu.</inlineHelpText>
    <label>Lender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AdvanceMe</fullName>
            </value>
            <value>
                <fullName>FPC</fullName>
            </value>
            <value>
                <fullName>GRP Funding</fullName>
            </value>
            <value>
                <fullName>New Logic</fullName>
            </value>
            <value>
                <fullName>On Deck Capital</fullName>
            </value>
            <value>
                <fullName>Quick Bridge Funding</fullName>
            </value>
            <value>
                <fullName>Rapid Financial Services</fullName>
            </value>
            <value>
                <fullName>Strategic Funding Source</fullName>
            </value>
            <value>
                <fullName>Merchant Cash &amp; Capital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>