unpackaged/main/default/objects/FPC_MCA_Lender_Offer__c/fields/ML_Lender__c.field-meta.xml
<CustomField>
    <fullName>ML_Lender__c</fullName>
    <description>This is a list of lenders for the ML product.</description>
    <inlineHelpText>Pick the ML lender that has approved the deal.</inlineHelpText>
    <label>ML Lender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On Deck</fullName>
            </value>
            <value>
                <fullName>Rapid Financial Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>