unpackaged/main/default/objects/FPC_MCA_Lender_Offer__c/fields/OFFER_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>OFFER_NUMBER__c</fullName>
    <description>Offer number</description>
    <inlineHelpText>Type in the offer number associated with each offer.</inlineHelpText>
    <label>OFFER NUMBER</label>
    <length>2</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>