unpackaged/main/default/objects/FPC_MCA_Lender_Offer__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Merchant Lender Offers (Opportunity)</relationshipLabel>
    <relationshipName>MCA_Lender_Offers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>