unpackaged/main/default/objects/FPC_MCA_Lender_Offer__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Merchant Lender Offers</relationshipLabel>
    <relationshipName>MCA_Lender_Offers1</relationshipName>
    <type>Lookup</type>
</CustomField>