unpackaged/main/default/objects/FPC_MCA_Lender_Offer__c/fields/Origination_Fee__c.field-meta.xml
<CustomField>
    <fullName>Origination_Fee__c</fullName>
    <description>This field will capture the Origination Fee on the Merchant Offer Level.</description>
    <inlineHelpText>Type in the Origination Fee for the transaction.  Use whole numbers only, do not add a % or a decimal.</inlineHelpText>
    <label>Origination Fee</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>