unpackaged/main/default/objects/FPC_MCA_Lender_Offer__c/fields/Points_In_Merchant_Offer__c.field-meta.xml
<CustomField>
    <fullName>Points_In_Merchant_Offer__c</fullName>
    <description>This field will capture the amount of points that offers contain from Merchant Funding Lenders.</description>
    <inlineHelpText>This field will capture the amount of points that offers contain from Merchant Funding Lenders.</inlineHelpText>
    <label>Points In Merchant Offer</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>