unpackaged/main/default/objects/FPC_MCA_Lender_Offer__c/fields/RATIO__c.field-meta.xml
<CustomField>
    <fullName>RATIO__c</fullName>
    <description>Ratio of funds offered that will be collected.</description>
    <inlineHelpText>Type in the ratio of funds offered that will be collected.</inlineHelpText>
    <label>RATIO</label>
    <length>32</length>
    <type>Text</type>
</CustomField>