unpackaged/main/default/objects/FPC_MCA_Lender_Offer__c/fields/RETRIEVAL_RATE__c.field-meta.xml
<CustomField>
    <fullName>RETRIEVAL_RATE__c</fullName>
    <description>Retrieval rate - a percentage of credit card sales withheld</description>
    <inlineHelpText>Type in the retrieval rate that will be collected.</inlineHelpText>
    <label>RETRIEVAL RATE</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>