unpackaged/main/default/objects/FPC_MCA_Lender_Offer__c/fields/TERM_MONTHS__c.field-meta.xml
<CustomField>
    <fullName>TERM_MONTHS__c</fullName>
    <description>Term in months or days.</description>
    <inlineHelpText>Type in the term in months of the MCA or the number of days in a Merchant Loan offer.</inlineHelpText>
    <label>Term (M/D)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>