unpackaged/main/default/objects/FPC_MCA_Lender_Offer__c/recordTypes/NF_Customer_Direct.recordType-meta.xml
<RecordType>
    <fullName>NF_Customer_Direct</fullName>
    <active>true</active>
    <label>NF Customer Direct</label>
</RecordType>