unpackaged/main/default/objects/FPC_MCA_Lender_Offer__c/recordTypes/Pricing_For_Broker.recordType-meta.xml
<RecordType>
    <fullName>Pricing_For_Broker</fullName>
    <active>true</active>
    <label>Pricing For Broker</label>
</RecordType>